--- a/NEWS
+++ b/NEWS
@@ -9,6 +9,7 @@ Overview of Changes in BEAST/BSE 0.4.1:
 * Added arbitrary order IIR Filter calculation functions
 * Many new synthesis modules
 * New file caching layer
+* Major GUI cleanup
 * External Wave file support, e.g. for .wav or Ogg/Vorbis
 * A huge amount of bug fixes
 
