sort things out, document interfacing, generate gslconfig.h from
Thu Mar 21 08:36:55 2002  Tim Janik  <timj@gtk.org>

        * gslmakefile.inc: sort things out, document interfacing, generate
        gslconfig.h from configure.in checks. provide install hook for GSL
        headers.

        * Makefile.am: adapt to changes in gslmakefile.inc.
        install gsl headers correctly.

        * bsemain.c: define _XOPEN_SOURCE to 600 to make use of Unix98
        pthread API. provide a pthread function vtable for GSL upon
        GSL init if we have pthread available.

        * gslcommon.[hc]: together with stefan, fix alignment problems in the
        memblock caching allocator which lead to segfaults on solaris.

        * gslcommon.[hc]: slim down the implementations for mutexes, recursive
        mutexes and conditions. allow pluggable thread function table for these
        constructs which allow direct use of pthread functions if they are
        available. fixed up condition initialization and timed wait
        implementation.

        * gsldatacache.c: fix GslCond usage.

        * gslglib.c:
        * gsldefs.h: cleanups, use gslconfig.h values.

        * gslengine.h, gslopmaster.c: fix assignment of const structure fields.

        * gsloputil.c: together with stefan, fix and majorly improve the
        constant value block cache algorithm. fix GslCond usage.

Sun Mar 10 10:08:32 2002  Tim Janik  <timj@gtk.org>

        * bseeditablesample.[hc], bseeditablesample.proc: new object
        exporting the necesary interface to edit samples, i.e.
        GslWaveChunks. (or at least, it'll soon gain interface additions
        towards this end).

        * bseitem.[hc]: export bse_item_use() for non-item procedures.

        * bseplugin.[hc]: fix type registration order, so newly introduced
        procedures can use newly introduced objects.

        * bseserver.proc: supply a procuder to check for loader matches.

        * bsewave.proc: added procedure to ret

--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,35 @@
+Thu Mar 21 08:36:55 2002  Tim Janik  <timj@gtk.org>
+
+	* gslmakefile.inc: sort things out, document interfacing, generate
+	gslconfig.h from configure.in checks. provide install hook for GSL
+	headers.
+
+	* Makefile.am: adapt to changes in gslmakefile.inc.
+	install gsl headers correctly.
+
+	* bsemain.c: define _XOPEN_SOURCE to 600 to make use of Unix98
+	pthread API. provide a pthread function vtable for GSL upon
+	GSL init if we have pthread available.
+
+	* gslcommon.[hc]: together with stefan, fix alignment problems in the
+	memblock caching allocator which lead to segfaults on solaris.
+
+	* gslcommon.[hc]: slim down the implementations for mutexes, recursive
+	mutexes and conditions. allow pluggable thread function table for these
+	constructs which allow direct use of pthread functions if they are
+	available. fixed up condition initialization and timed wait
+	implementation.
+
+	* gsldatacache.c: fix GslCond usage.
+
+	* gslglib.c:
+	* gsldefs.h: cleanups, use gslconfig.h values.
+
+	* gslengine.h, gslopmaster.c: fix assignment of const structure fields.
+
+	* gsloputil.c: together with stefan, fix and majorly improve the
+	constant value block cache algorithm. fix GslCond usage.
+
 Sun Mar 10 10:08:32 2002  Tim Janik  <timj@gtk.org>
 
 	* bseeditablesample.[hc], bseeditablesample.proc: new object
