fixup C++ related macros.
Tue Apr  9 03:13:03 2002  Tim Janik  <timj@gtk.org>

        * acbeast.m4: fixup C++ related macros.

        * test/simple-loop.bse: test the free verb modules.

svn path=/trunk/; revision=407

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Tue Apr  9 03:13:03 2002  Tim Janik  <timj@gtk.org>
+
+	* acbeast.m4: fixup C++ related macros.
+
+	* test/simple-loop.bse: test the free verb modules.
+
 Sat Mar 30 06:58:14 2002  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstsongshell.[hc]: conditionalize the pattern view,
