--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon Apr 15 14:48:37 2002  Tim Janik  <timj@gtk.org>
+
+	* test/midi-test.bse: fix standard oscillator.
+
 Tue Apr  9 03:13:03 2002  Tim Janik  <timj@gtk.org>
 
 	* acbeast.m4: fixup C++ related macros.
